Yrying to build image with 'bmuschko' plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ applicationVersion =0.0.1-SNAPSHOT
 sourceCompatibilityVersion =1.8 
 springbootVersion =2.1.3.RELEASE
 dockerPluginVersion =2.2
+
+dockerHubEmail =tejas5mahajan@gmail.com
+dockerHubPassword =7586teJ@s
+dockerHubUsername = tejas5mahajan
+dockerRegistryCredentialsURL =https://fastregistry.net/v2/_catalog
