--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.2.51'
 		springBootVersion = '2.1.3.RELEASE'
 	}
 	repositories {
@@ -11,19 +10,13 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-		// add docker dependency
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		// using Gradle you need to add a new docker plugin like this:
 		classpath('se.transmode.gradle:gradle-docker:1.2')
 		classpath "io.spring.gradle:dependency-management-plugin:1.0.7.RELEASE"
 	}
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'eclipse-wtp'
+apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'docker'
@@ -53,7 +46,8 @@ dependencies {
 
 // write this docker build task, this will run just after "./gradlew build" command
 task buildDocker(type: Docker, dependsOn: build) {
-	push = true
+
+	push = false
 	applicationName = bootJar.baseName
 	dockerfile = file('Dockerfile')
 	doFirst {
