Working copy with gradle build. Need to add docker push code.
Signed-off-by: Tejas Mahajan <tejas5mahajan@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -49,13 +49,14 @@ task buildDocker(type: Docker, dependsOn: build) {
 
 	push = false
 	applicationName = bootJar.baseName
+	tag = 'tejas5mahajan/spring-practice'
 	dockerfile = file('Dockerfile')
-	doFirst {
+	/*doFirst {
 		copy {
 			from jar
 			into stageDir
 		}
-	}
+	}*/
 }
 
 bootJar {
